--- a/base/build.gradle
+++ b/base/build.gradle
@@ -9,16 +9,27 @@ android {
         versionCode 27
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
-    api 'com.android.support:appcompat-v7:27.+'
+
+    //Android Libs
+    api 'com.android.support:appcompat-v7:27.1.1'
+    api "com.android.support:design:27.1.1"
+    api 'com.android.support.constraint:constraint-layout:1.1.2'
+
     application project(':app')
     feature project(':feature')
 }
