--- a/base/build.gradle
+++ b/base/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     //Android Libs
     api 'com.android.support:appcompat-v7:27.1.1'
     api "com.android.support:design:27.1.1"
+    api 'com.android.support:cardview-v7:27.1.1'
     api 'com.android.support.constraint:constraint-layout:1.1.2'
 
     application project(':app')
