--- a/feature/src/main/AndroidManifest.xml
+++ b/feature/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".projects.detail.ProjectDetailActivity"/>
+        <activity android:name=".tasks.TaskActivity" android:label="@string/title_task_detail"/>
     </application>
 
 </manifest>
